// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Stores customer information including credit limits and balances.
CustomerAddress: Stores multiple addresses of a customer.
Discount: Contains information about discounts applicable to products.
Product: Stores product details including unit prices.
Item: Details of items included in orders.
Order: Stores order details including order date and notes.
PaymentMethod: Stores payment methods available for customers.
PurchaseOrder: Orders placed with suppliers to stock products.
Supplier: Information about suppliers who provide products.
PurchaseOrderItem: Details of items ordered in purchase orders.
ShipmentDetail: Details about shipments for orders.
Shipper: Information about shipping companies.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    credit_limit FLOAT 
    balance FLOAT 
    }

Table CustomerAddress {
    id INTEGER [primary key]
    customer_id INTEGER 
    address VARCHAR 
    }

Table Discount {
    id INTEGER [primary key]
    product_id INTEGER 
    discount_rate FLOAT 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    unit_price FLOAT 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    amount FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    amount_total FLOAT 
    date_shipped DATETIME 
    notes VARCHAR 
    }

Table PaymentMethod {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table PurchaseOrder {
    id INTEGER [primary key]
    supplier_id INTEGER 
    order_date DATETIME 
    received BOOLEAN 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    phone VARCHAR 
    }

Table PurchaseOrderItem {
    id INTEGER [primary key]
    purchase_order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table ShipmentDetail {
    id INTEGER [primary key]
    order_id INTEGER 
    shipper_id INTEGER 
    shipment_date DATETIME 
    }

Table Shipper {
    id INTEGER [primary key]
    name VARCHAR 
    contact_info VARCHAR 
    }



// Relationships
    Ref: CustomerAddress.(customer_id) < Customer.(id)
    Ref: Discount.(product_id) < Product.(id)
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: PurchaseOrder.(supplier_id) < Supplier.(id)
    Ref: PurchaseOrderItem.(product_id) < Product.(id)
    Ref: PurchaseOrderItem.(purchase_order_id) < PurchaseOrder.(id)
    Ref: ShipmentDetail.(order_id) < Order.(id)
    Ref: ShipmentDetail.(shipper_id) < Shipper.(id)
